metade da página do t34 feita

--- a/meu-site/t-34.html
+++ b/meu-site/t-34.html
@@ -7,9 +7,10 @@
     <title>Tanks</title>
     <link rel="shortcut icon" href="imagens/Tank-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="listados.css">
+    <link rel="stylesheet" href="mobile.css">
     <style>
         body{
-            background-image: url('imagens/background-t34-1000.jpg');
+            background-image: url('imagens/background-t34-1000-cort.jpg');
         }
     </style>
 </head>
@@ -24,6 +25,35 @@
     <main>
         <h1>T-34</h1> 
         <hr><h2>Criação</h2><hr>
+        <p>Foi um blindado médio projetado pela União Soviética no ano de 1939, quando os antigos T-26 e a série BT estavam ficando obsoletos demais em relação ao poder de fogo e blindagem.<p>
+        <p>Os primeiros protótipos foram desenvolvidos em 1940, com os primeiros de produção sendo entregues em setembro desse mesmo ano, substituindo os anteriores já citados.</p>
+        <picture>
+            <source media="(max-width: 350px)" srcset="imagens/t34-250.jpg" type="image/jpeg">
+            <source media="(max-width: 540px)" srcset="imagens/t34-300.jpg" type="image/jpeg">
+            <img src="imagens/t34-500.jpg" alt="Imagem do t-34">
+        </picture><p class="img">T-34</p>
+        <p>Foram produzidas cerca de 84.000 unidades, o que o torna o segundo blindado mais produzido da história, perdendo apenas para a série T-54/55. Na segunda guerra mundial, a União Soviética perdeu quase 45.000 t-34s nas inúmeras batalhas em que participou.</p>
+        <hr><h2>Variantes</h2><hr>
+        <p>A maioria das versões eram apenas melhorias das anteriores, entre elas:</p>
+        <ul>
+            <li>Modelo 1940 (T-34/76A) - A primeira versão produzida, que vinha com um canhão L-11 de 76,2mm</li>
+            <li>Modelo 1941 (T-34/76B) - Veio com melhorias na blindagem, substituição do L-11 para o F-34 e mais 100km de alcance operacional (de 300km para 400km)</li>
+            <li>Modelo 1942 (T-34/76C) - Outra melhoria na blindagem e um novo motor, que tinha a capacidade de carregar 610 litros de combustível</li>
+            <li>Modelos de 1943 (T-34/76D E e F) - Aumento no alcance operacional (de 400km para 465km), outro motor com capacidade de 790 litros, uma blindagem mais espessa e maior capacidade para mais projéteis (100)</li>
+        </ul>
+        <h3>T-34-85</h3>
+        <p>Outro modelo também produzido em 1943 foi o T-34-85, variante mais poderosa do T-34, em que o canhão foi melhorado para o ZiS-S-53 com 85mm, acrescentando e muito no seu poder de fogo, o que obrigou aos engenheiros a produzirem uma nova torre para receber o novo canhão. Na parte da blindagem, saiu de 70mm (do modelo de 1943) para 90mm na parte frontal, o que, junto com a inclinação, favoreceu ainda mais proteção à tripulação contra outros blindados e canhões anti-tanque.</p>
+        <picture>
+            <source media="(max-width: 350px)" srcset="imagens/t34-85-250.jpg" type="image/jpeg">
+            <source media="(max-width: 540px)" srcset="imagens/t34-85-300.jpg" type="image/jpeg">
+            <img src="imagens/t34-85-500.jpg" alt="Imagem do T-34-85">
+        </picture><p class="img">T-34-85</p>
+        <hr><h2>Especificações</h2><hr>
+        <h3>Blindagem</h3>
+        <p>O veículo possuía uma blindagem muito boa para um tanque médio da época e formidável para os anos seguintes, variando, na frente, de 45mm a 90mm entre as suas versões. A sua maior vantagem com certeza eram as suas inclinações em todo o chassi e a torre, que serviam para refletir projéteis dos mais variados calibres.</p>
+        <h3>Poder de fogo</h3>
+        <p>Como já dito anteriormente, vinha equipado com canhões L-11, F-34 e ZiS-S-53, dependendo da variante. O canhão F-34, o mais produzido, era capaz de perfurar a maioria dos blindados alemães (Panzers III e IV) a distâncias médias e curtas, já o ZiS-S-53 conseguia penetrar blindagens mais grossas (Panther e Tiger I) a distâncias maiores. Como suporte contra a infantaria inimiga, duas metralhadoras de 7,62mm DT foram colocadas, uma em cima da torre e outra incorporada no chassi.</p>
+        <h3>Mobilidade</h3>
         <p></p>
     </main>
     <footer>
