--- a/meu-site/t-34.html
+++ b/meu-site/t-34.html
@@ -54,6 +54,14 @@
         <h3>Poder de fogo</h3>
         <p>Como já dito anteriormente, vinha equipado com canhões L-11, F-34 e ZiS-S-53, dependendo da variante. O canhão F-34, o mais produzido, era capaz de perfurar a maioria dos blindados alemães (Panzers III e IV) a distâncias médias e curtas, já o ZiS-S-53 conseguia penetrar blindagens mais grossas (Panther e Tiger I) a distâncias maiores. Como suporte contra a infantaria inimiga, duas metralhadoras de 7,62mm DT foram colocadas, uma em cima da torre e outra incorporada no chassi.</p>
         <h3>Mobilidade</h3>
+        <p>Seu motor era o modelo V-2-34 38,8 L V12 a diesel de 500 hp (ou 506,93 cv) e 370kW, o que proporcionava uma velociade máxima de 53Km/h. Em relação aos blindados alemães, o T-34 tinha menos problemas com terrenos lamacentos e terrenos cheios de neve, devido às suas lagartas que eram mais largas em comparação às dos inimigos, entretanto não estavam livres de problemas, havendo perdas nessa briga contra a natureza.<p>
+        <h3>Outras</h3>
+        <ul>
+            <li>Peso (Massa): 26.500 Kg nos mais antigos e 31.000 Kg no T-34-85</li>
+            <li>Alcance operacional: varia de 300Km a 465Km dependendo da versão</li>
+            <li>Tripulação: 4 tripulantes (T-34) a 5 tripulantes (T-34-85)</li>
+        </ul>
+        <hr><h2>Atuações</h2><hr>
         <p></p>
     </main>
     <footer>
