progressão na página do t-34

--- a/meu-site/t-34.html
+++ b/meu-site/t-34.html
@@ -72,7 +72,21 @@
             <img src="imagens/t34-interior2-cort-500.jpg" alt="Imagem do T-34 aberto">
         </picture><p class="img">T-34 aberto</p>
         <hr><h2>Atuações</h2><hr>
-        <p></p>
+        <h3>Operação Barbarossa</h3>
+        <p>O primeiro encontro de um T-34 foi na grande invasão da União Soviética pela Alemanha nazista na Operação Barbarossa em 1941. Os alemães acreditavam que os soviéticos estariam inferiores no quesito de força bélica, hipótese que foi derrubada imediatamente com o encontro dos recém criados T-34 e KV-1, que se mostravam melhores do que todos os blindados alemães da época. Foi chamado por um general alemão de "o melhor tanque do mundo".</p>
+        <picture>
+            <source media="(max-width: 350px)" srcset="imagens/t34-barbarossa-250.jpg" type="image/jpeg">
+            <source media="(max-width: 540px)" srcset="imagens/t34-barbarossa-300.jpg" type="image/jpeg">
+            <img src="imagens/t34-barbarossa-500.jpg" alt="Imagem do T-34 na Operação Barbarossa">
+        </picture><p class="img">T-34 na Operação Barbarossa</p>
+        <p>Ele deu muito trabalho às forças alemãs, pois os canhões anti-tanque PaK 36 de 3,7cm nazistas eram insuficientes para penetrar a blindagem inclinada do T-34. Em um encontro, um único T-34 foi atingido mais de 30 vezes por vários canhões anti-tanque alemães e voltou intacto para a sua linha de defesa.</p>
+        <p>Entretanto, muitos T-34s eram perdidos em quantidades maiores que blindados alemães devido a falhas mecânicas que ocorriam no campo de batalha. Dois fatores foram essenciais para isso acontecer, o primeiro era a disparidade de habilidades táticas entre alemães e soviéticos e a outra, como já dito, problemas mecânicos, principalmente nos sistemas de embreagem e transmissão. Esses problemas obrigaram os soviéticos a abandonarem muitos T-34, que, posteriormente, foram capturados pelos nazistas e utilizados na guerra.</p>
+        <picture>
+            <source media="(max-width: 350px)" srcset="imagens/t34-capturado-250.jpg" type="image/jpeg">
+            <source media="(max-width: 540px)" srcset="imagens/t34-capturado-300.jpg" type="image/jpeg">
+            <img src="imagens/t34-capturado.jpg" alt="Imagem de um T-34 capturado pela Alemanha">
+        </picture><p class="img">T-34 capturado pela Alemanha</p>
+        <h3></h3>
     </main>
     <footer>
         &copy;Leandro Pessoa
