projeto da tela de login 2 finalizado

--- a/hub/hub.html
+++ b/hub/hub.html
@@ -99,6 +99,8 @@
             <a href="https://leandro-pessoa.github.io/html-css/desafios/desafio015/desafio015.html" target="_blank" rel="external"><div>Projeto redes sociais (Conteúdo não autoral)</div></a>
             <a href="https://leandro-pessoa.github.io/html-css/desafios/desafio017/desafio017.html" target="_blank" rel="external"><div>Projeto da tela de login (Conteúdo não autoral)</div></a>
             <h3>JavaScript</h3>
+            <a href="https://leandro-pessoa.github.io/js/menu-js/principal/principal.html" target="_blank" rel="external"><div>Menu JS</div></a>
+            <a href="https://leandro-pessoa.github.io/js/menu-js/projetos/agenda/agenda.html" target="_blank" rel="external"><div>Agenda de deveres (To-do list)</div></a>
             <a href="https://leandro-pessoa.github.io/js/notas/notas.html" target="_blank" rel="external"><div>Sistema básico de notas (Conteúdo autoral)</div></a>
             <a href="https://leandro-pessoa.github.io/js/exerc%C3%ADcio7%20.1/exerc%C3%ADcio7.1.html" target="_blank" rel="external"><div>Analisador de números (Conteúdo não autoral)</div></a>
             <a href="https://leandro-pessoa.github.io/js/d%C3%A9cimo7/d%C3%A9cimo7.html" target="_blank" rel="external"><div>Calculador de IMC (Conteúdo autoral)</div></a>
