novo projeto inserido no hub

--- a/hub/hub.html
+++ b/hub/hub.html
@@ -107,6 +107,8 @@
             <a href="https://leandro-pessoa.github.io/js/exerc%C3%ADcio7%20.1/exerc%C3%ADcio7.1.html" target="_blank" rel="external"><div>Analisador de números </div></a>
             <a href="https://leandro-pessoa.github.io/js/d%C3%A9cimo7/d%C3%A9cimo7.html" target="_blank" rel="external"><div>Calculador de IMC</div></a>
             <a href="https://leandro-pessoa.github.io/js/Contador/contador.html" target="_blank" rel="external"><div>Contador</div></a>
+            <h3>React JS</h3>
+            <a href="https://leandro-pessoa.github.io/js/react/vite-project6/index.html"><div>Relatório de dados</div></a>
         </section>
     </main>
     <footer>
